Add weather and location feature 1. Add weather api to get current weather based on latitude and longitude 2. Add location feature to get current latitude and longitude

--- a/CoffeeShop.Web/Pages/Index.razor
+++ b/CoffeeShop.Web/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inject ICoffeeService CoffeeService
 
-<PageTitle>Index</PageTitle>
+<PageTitle>For People Who Love Coffee</PageTitle>
 
 <h1 class="text-center mb-3">Welcome to the coffee shop</h1>
 
