--- a/CoffeeShop.Web/Shared/NavMenu.razor
+++ b/CoffeeShop.Web/Shared/NavMenu.razor
@@ -14,6 +14,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="GetCoffeeWithWeather" Match="NavLinkMatch.All">
+                <span class="oi oi-info" aria-hidden="true"></span> Get a cup of coffee
+            </NavLink>
+        </div>
     </nav>
 </div>
 
