--- a/CoffeeShop.Web/Pages/Index.razor
+++ b/CoffeeShop.Web/Pages/Index.razor
@@ -40,7 +40,7 @@
 
     private async void OrderCoffee()
     {
-        Coffee = await CoffeeService.GetCoffee();
+        //Coffee = await CoffeeService.GetCoffee();
         orderPlaced++;
     }
 }
