--- a/CoffeeShop.Web/Shared/NavMenu.razor
+++ b/CoffeeShop.Web/Shared/NavMenu.razor
@@ -11,12 +11,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="GetCoffeeWithWeather" Match="NavLinkMatch.All">
-                <span class="oi oi-info" aria-hidden="true"></span> Get a cup of coffee
+                <span class="oi oi-home" aria-hidden="true"></span> Get a cup of coffee
             </NavLink>
         </div>
     </nav>
